# pipad

./: .env  Cargo.toml  flake.nix
.cargo/: config.toml
src/: consts.rs  main.rs
